[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
# [profile.dev.package."*"]
# opt-level = 3

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[dependencies]
bevy = { version = "0.14.2", features = ["dynamic_linking"] }
# Refer to https://bevyengine.org/learn/quick-start/getting-started/setup/
# log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
